fix: make all whitespaces render

--- a/frontend/src/components/typing-box/text-container/TextContainer.scss
+++ b/frontend/src/components/typing-box/text-container/TextContainer.scss
@@ -1,5 +1,6 @@
 .text-container {
   position: relative;
+  white-space: pre-wrap;
 
   &__cursor {
     position: absolute;
